TR-61162: hw9 fix create method in Book and Comment Entity