@@ -16,6 +16,7 @@ import ru.baranova.spring.service.app.ParseService;
 import ru.baranova.spring.service.data.LibraryService;
 import ru.baranova.spring.service.print.visitor.EntityPrintVisitor;
 
+import java.util.Collections;
 import java.util.List;
 
 @SpringBootTest(classes = {LibraryShellControllerTestConfig.class, StopSearchConfig.class, ThrowingAspect.class})
@@ -39,7 +40,7 @@ class LibraryShellControllerTest {
         Author author = new Author(7, "surname", "name");
         genre1 = new Genre(7, "name1", "description");
         genre2 = new Genre(8, "name2", "description");
-        book = new Book(7, "title", author, List.of(genre1, genre2));
+        book = new Book(7, "title", author, List.of(genre1, genre2), Collections.emptyList());
     }
 
     @Test
@@ -150,7 +151,7 @@ class LibraryShellControllerTest {
     @Test
     void readByTitle_correct() {
         Book book1 = book;
-        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1));
+        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1), Collections.emptyList());
         String inputTitle = book.getTitle();
         Mockito.when(libraryService.readByTitle(inputTitle)).thenReturn(List.of(book1, book2));
         Mockito.doNothing().when(printer).print((Book) Mockito.any());
@@ -163,7 +164,7 @@ class LibraryShellControllerTest {
     @Test
     void readByTitle_incorrectRead() {
         Book book1 = book;
-        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1));
+        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1), Collections.emptyList());
         String inputTitle = book.getTitle();
         Mockito.when(libraryService.readByTitle(inputTitle)).thenReturn(List.of(book1, book2));
         Mockito.doThrow(NullPointerException.class).when(printer).print((Book) Mockito.any());
@@ -186,7 +187,7 @@ class LibraryShellControllerTest {
     @Test
     void readAll_correct() {
         Book book1 = book;
-        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1));
+        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1), Collections.emptyList());
         Mockito.when(libraryService.readAll()).thenReturn(List.of(book1, book2));
         Mockito.doNothing().when(printer).print((Book) Mockito.any());
 
@@ -198,7 +199,7 @@ class LibraryShellControllerTest {
     @Test
     void readAll_incorrectRead() {
         Book book1 = book;
-        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1));
+        Book book2 = new Book(8, "title", new Author(8, "surname1", "name1"), List.of(genre1), Collections.emptyList());
         Mockito.when(libraryService.readAll()).thenReturn(List.of(book1, book2));
         Mockito.doThrow(NullPointerException.class).when(printer).print((Book) Mockito.any());
 
